# pacs

./: .env  GEMINI.md  README.md  api_config.py  api_main.py  baml_classification.py  config.py  dicom_processing_pipeline.py  fase1_descompresion.py  fase2_clasificacion.py  fase3_linealizacion.py  fase4_envio_pacs.py  get_pydicom_path.py  linealize.py  main.py  pacs_operations.py  pyproject.toml  requirements.txt  utils.py  viewer.py
.gemini/: settings.json
baml_client/: async_client.py  async_request.py  parser.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: clients.baml
data/: linearizacion.csv
modelo_final/: clasificador_svc.joblib  escalador.joblib
