[project]
name = "pacs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.89.0",
    "gdcm>=1.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydicom>=3.0.1",
    "pynetdicom>=2.1.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
]
